fix button icon alignment

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -206,12 +206,14 @@ button {
   -moz-appearance: none;
   appearance: none;
   width: auto; /* Button width will adjust based on content */
-  padding: 20px; /* Padding inside the button */
+  padding: 10px; /* Padding inside the button */
   border: none; /* border */
   border-radius: 4px; /* Rounded corners */
   background: var(--color-3); /* White background */
   font-size: 16px; /* Font size */
   text-align: center;
+  align-items: center; /* Centers content vertically */
+  justify-content: center; /* Centers content horizontally */
   color: var(--color-1); /* Text color */
   cursor: pointer; /* Change cursor to pointer on hover */
   outline: none; /* Remove the default focus outline */
